--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,3 +71,38 @@
 #sortbox:checked ~ #sortboxmenu {
     opacity: 1;
 }
+
+.overlay_text {
+
+    transition:0.5s ease-in-out;
+    width: 0%;
+    height: 0%;
+    border-radius: 50%;
+    display: none;
+  }
+
+  .custom-width-transition:hover .overlay_text{
+    width: 100% ;
+height: 100%;
+bottom: 0%;
+display: flex;
+  }
+
+  .custom-width-transition{
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .custom-width-transition:hover{
+    transform: scale(0.9);
+  }
+
+  .link-wrapper{
+    transition: transform 0.5s ease-in-out;
+  }
+  .link-wrapper:hover{
+background-color: #cf2e2e;
+  }
+
+  .link-wrapper:hover .link_icon{
+color: #fff;
+}
