--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,7 +117,7 @@ background-color: #cf2e2e;
 
   .link-wrapper:hover .link_icon{
 color: #fff;
-=======
+  }
 .glutrendPageContainer{
     width: 100%;
     height: auto;
