--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,10 +69,10 @@
 }
 
 /*  CSS SLIDER */
-/* .slick-track {
+.slick-track {
     display: flex !important;
     gap: 2rem;
-} */
+}
 
 .slick-prev:before,
 .slick-next:before {
@@ -117,7 +117,7 @@ background-color: #cf2e2e;
 
   .link-wrapper:hover .link_icon{
 color: #fff;
-=======
+  }
 .glutrendPageContainer{
     width: 100%;
     height: auto;
